@@ -2,7 +2,7 @@
 # The filesystem that contains the filesystem checker binary (typically /system) cannot
 # specify MF_CHECK, and must come before any filesystems that do specify MF_CHECK
 
-# Note from CosmicDan - this is only a bare-bones fstab for Recovery update_payload. TWRP loads from /etc/twrp.flags
+# Note from CosmicDan - this is only a bare-bones fstab for payload update compatibility. TWRP loads additional stuff from /etc/twrp.flags
 
 #TODO: Add 'check' as fs_mgr_flags with data partition.
 # Currently we dont have e2fsck compiled. So fs check would failed.
